<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp" android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true" android:layout_alignParentStart="true" android:id="@+id/linearLayout1">
        <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
        </TableLayout>
        <Switch
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/time_range_filter"
                android:id="@+id/sw_use_time"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp" android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true" android:layout_alignParentStart="true" android:id="@+id/linearLayout">
        <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
        </TableLayout>
        <Switch
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/use_stranger"
                android:id="@+id/sw_use_stranger"/>
    </LinearLayout>
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location_filter"
            android:id="@+id/btn_location"/>
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/black_list_filter"
            android:id="@+id/btn_black_list"/>
</LinearLayout>