<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.hansong.filter.app.BlackListActivity">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp" android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true" android:layout_alignParentStart="true" android:id="@+id/linearLayout">
       <Switch
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/use_black_list"
                android:id="@+id/sw_use_black_list"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true" android:layout_alignParentStart="true"
            android:layout_below="@+id/linearLayout">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="40dp">
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:phoneNumber="true"
                    android:maxLength="11"
                    android:id="@+id/et_number" android:layout_weight="3" android:hint="@string/input_number"/>
            <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/add"
                    android:id="@+id/btn_add" android:layout_weight="1"/>
        </LinearLayout>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="点击下面的号码可从黑名单中删除"
                android:id="@+id/textView"/>
        <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lv_number" android:layout_gravity="center_horizontal"/>
    </LinearLayout>
</RelativeLayout>
